WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198428
URLParser::parseHostAndPort should not allow non-port characters after an ipv6 host
https://bugs.webkit.org/show_bug.cgi?id=198428
Summary
URLParser::parseHostAndPort should not allow non-port characters after an ipv...
Alex Christensen
Reported
2019-05-31 11:24:46 PDT
URLParser::parseHostAndPort should not allow non-port characters after an ipv6 host
Attachments
Patch
(2.90 KB, patch)
2019-05-31 11:31 PDT
,
Alex Christensen
thorton
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-05-31 11:31:03 PDT
Created
attachment 371072
[details]
Patch
Alex Christensen
Comment 2
2019-05-31 11:31:06 PDT
<
rdar://problem/51209196
>
EWS Watchlist
Comment 3
2019-05-31 13:19:50 PDT
Comment on
attachment 371072
[details]
Patch
Attachment 371072
[details]
did not pass jsc-ews (mac): Output:
https://webkit-queues.webkit.org/results/12341803
New failing tests: mozilla-tests.yaml/js1_5/Array/regress-101964.js.mozilla-no-ftl apiTests
Alex Christensen
Comment 4
2019-05-31 13:57:35 PDT
https://trac.webkit.org/changeset/245982/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug