URLParser::parseHostAndPort should not allow non-port characters after an ipv6 host https://bugs.webkit.org/show_bug.cgi?id=198428 <rdar://problem/51209196>

Reviewed by Tim Horton.

Source/WTF:

This matches Chrome and Firefox.

* wtf/URLParser.cpp:
(WTF::URLParser::parseHostAndPort):

Tools:

* TestWebKitAPI/Tests/WTF/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/212457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245982 268f45cc-cd09-0410-ab3c-d52691b4dbfc